--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biuro Projektowe – Jan Kowalski</title>
+  <title>Biuro Projektowe – Krzysztof Zorn</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: linear-gradient(to bottom, #ffffff, #2c3e50);}
     header { background: #2c3e50; color: white; padding: 20px; text-align: center; }
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <h1>Biuro Projektowe Krzysztof Zorn</h1>
+    <h1>Biuro Inżynierskie Krzysztof Zorn</h1>
     <p>Projektowanie konstrukcji budowlanych – budownictwo lądowe</p>
   </header>
 
@@ -61,7 +61,7 @@
    
 
   <footer>
-    <p>Biuro Projektowe Krzysztof Zorn | NIP: 0000000000</p>
+    <p>Biuro Inżynierskie Krzysztof Zorn | NIP: 0000000000</p>
   </footer>
 </body>
 
@@ -69,3 +69,4 @@
 <footer style="background-color: transparent;">
     <p style="color : rgb(128, 166, 165) ;">Projekt i realizacja strony: Grzegorz Zorn</p> 
 </footer>
+
