--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZZGLK0YEGK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZZGLK0YEGK');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biuro Inzynierskie – Krzysztof Zorn</title>
@@ -69,5 +76,6 @@
 <footer style="background-color: transparent;">
     <p style="color : rgb(128, 166, 165) ;">Projekt i realizacja strony: Grzegorz Zorn</p> 
 </footer>
+
 
 
