--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     gtag('js', new Date());
     gtag('config', 'G-ZZGLK0YEGK');
   </script>
+  <meta name="description" content="Biuro Inżynierskie Zorn oferuje profesjonalne usługi projektowe i doradztwo techniczne. Sprawdź naszą ofertę!">
+  <meta name="keywords" content="biuro inżynierskie, projektowanie, doradztwo, konstrukcje">
+  <meta name="author" content="Biuro Inżynierskie Zorn">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biuro Inzynierskie – Krzysztof Zorn</title>
@@ -76,6 +79,7 @@
 <footer style="background-color: transparent;">
     <p style="color : rgb(128, 166, 165) ;">Projekt i realizacja strony: Grzegorz Zorn</p> 
 </footer>
+
 
 
 
