--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       nowoczesnych i niezawodnych rozwiązań technicznych. 
     </p>
 
-    <img src="img/obrazek.jpg" alt="Projekt inżynierski – przykład realizacji">
+    <img src="jkmed.webp" alt="Projekt inżynierski – przykład realizacji">
 
     <h2>Dlaczego my?</h2>
     <ul>
@@ -65,3 +65,4 @@
   </footer>
 </body>
 </html>
+
