--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
     <p>Profesjonalne projektowanie i doradztwo techniczne</p>
   </header>
 
-  <nav>
-    <a href="index.html">Strona główna</a>
-    <a href="oferta.html">Oferta</a>
-    <a href="kontakt.html">Kontakt</a>
-  </nav>
+<nav class="menu">
+  <ul>
+    <li><a href="index.html">Strona główna</a></li>
+    <li><a href="oferta.html">Oferta</a></li>
+    <li><a href="kontakt.html">Kontakt</a></li>
+  </ul>
+</nav>
 
   <main>
     <h2>O nas</h2>
@@ -65,4 +67,3 @@
   </footer>
 </body>
 </html>
-
