--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
     <h1>Biuro Inżynierskie Krzysztof Zorn</h1>
   </header>
 
-  <nav>
+  <nav class="menu">
     <a href="index.html">Strona główna</a>
     <a href="oferta.html">Oferta</a>
     <a href="kontakt.html">Kontakt</a>
@@ -30,3 +30,4 @@
   </footer>
 </body>
 </html>
+
